<resources>
    <string name="app_name">OpenBook</string>>
    <string name="PREFFILE">OpenBook</string>
    <string name="settingSearch">Search Settings</string>
    <string name="settingOrder">Order Settings</string>
    <string name="DefBooks">Add default books</string>

    <string name="titol">Title</string>
    <string name="autor">Author</string>
    <string name="editorial">Publisher</string>
    <string name="categoria">Category</string>
    <string name="seleccio">Select a category</string>
    <string name="val">Rating</string>
    <string name="action_settings">Add data...</string>
    <string name="dataError">Error accessing to data</string>
    <!-- Opciones menu contextual-->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="missatge1"> has been deleted</string>
    <string name="missatge2"> has been added</string>
    <string name="missatge3"> already exists</string>
    <string name="missatge4"> has been modified</string>
    <string name="missatge5">A book with the same title and the same author already exists</string>
    <string name="missatge6">An error has ocurred</string>

    <string name="oneitem">| 1 item selected</string>
    <string name="moreitem"> items selected</string>
    <string name="noitem">| No items selected</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="num">5</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="options">Options</string>
    <string name="Sort">Sort books by</string>
    <string name="search">Search</string>
    <string-array name="categories">
        <item>Adventure</item>
        <item>Self-help</item>
        <item>Sci-Fi</item>
        <item>Classic</item>
        <item>Fantasy</item>
        <item>Comedy</item>
        <item>Mystery</item>
        <item>Biographical novel</item>
        <item>Graphic novel</item>
        <item>Historical novel</item>
        <item>Hard-boiled/Noir novel</item>
        <item>Horror and detective novel</item>
        <item>Poetry</item>
        <item>Paranormal</item>
        <item>Romance</item>
        <item>Young adult</item>
    </string-array>
    <string name="about">About OpenBook</string>
    <string name="a1">OpenBook is an app developed by Marta Barroso and Miguel Moreno for IDI (Autumn semester, 2016/17)</string>
    <string name="a2">This app has been licensed with the GNU General Public License version 3.</string>
    <string name="a3">You may copy, distribute and modify the software as long as you track changes/dates in source files.
        Any modifications to or software including (via compiler) GPL-licensed code must also be made available under the GPL along with build and install instructions.</string>
    <string name="a4">This app uses icons from www.flaticon.com. All rights go to their respective authors.</string>

    <string name="create">Create a book</string>
    <string name="c1">1. Press the button with plus sign which is in the lower right corner of the main screen.</string>
    <string name="c2">2. Fill in each of the attributes of the new book.</string>
    <string name="c3">3. In the end, press the save button.</string>
    <string name="edit2">Edit</string>
    <string name="e1">1. Make a long click on the item to modify.</string>
    <string name="e2">2. Press "Edit".</string>
    <string name="e3">3. Modify the attributes and click the save button.</string>
    <string name="delete2">Delete</string>
    <string name="d1">1. Make a long click on the item to delete.</string>
    <string name="d2">A message will confirm that the book has been deleted.</string>
    <string name="search2">Search</string>
    <string name="s1">1. Press the down arrow button to choose a search configuration.</string>
    <string name="s2">2. There are two kind of search: by tittle or by author.</string>
    <string name="s3">3. Press the magnifying glass button to search a book.</string>
    <string name="s4">4. Select the book.</string>
    <string name="sort">Sort the list by an attribute</string>
    <string name="so1">1. Press the options button situated in the upper right corner.</string>
    <string name="so2">2. Select the desired order.</string>

    <string name="Favourites">Previously seen</string>
    <string name="header">OpenBook</string>
    <string name="new_book">New Book</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="searchsettings">Search configuration</string>
    <string name="searchexplain">Searches can be filtered to fetch titles or authors.Choose a search parameter:</string>
    <string name="sortsettings">Order configuration</string>
    <string name="sortexplain">The list of books can be sorted according to: title, author, year of publication, category and rating of valuation.Choose an order:</string>
    <string name="help">Help</string>

    <string name="no_books">There are no books. You can add a new one by clicking here.</string>
    <string name="no_results">There are no books. :(</string>

    <string name="any">Publishing year</string>
    <string name="aboutFrag">AboutActivity</string>

    <string name="create2">Create or edit a book</string>
    <string name="about2">About this app</string>
    <string name="delete3">Delete</string>
    <string name="edit3">Edit</string>
    <string name="sort2">Sort the list</string>
    <string name="help2">Help</string>
    <string name="select">Select</string>
    <string name="NoEmptyField">All fields must be filled</string>
    <string name="selectedit">Select to edit</string>
    <string name="view">View a book</string>
    <string name="save">Save</string>
    <string name="searchFilter">"SEARCH FILTER:</string>
    <string name="sortFilter">SORT BOOKS BY:</string>
    <string name="save_config">Save configuration</string>

    <string-array name="searchOptions">
        <item>Author</item>
        <item>Title</item>
    </string-array>

    <string-array name="orderOptions">
        <item>Title</item>
        <item>Author</item>
        <item>Publishing Year</item>
        <item>Category</item>
        <item>Rating</item>
    </string-array>


</resources>