<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="?attr/actionBarSize"
    android:orientation="vertical"
    tools:context="com.example.pr_idi.mydatabaseexample.Activity_Item">

    <EditText
        android:id="@+id/ntitol"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
<<<<<<< HEAD
        android:hint="@string/titol"/>
=======
        android:hint="Títol"/>
>>>>>>> 4046bac43c76db33d022d1b9e2af9a7151fc1d5d
    <EditText
        android:id="@+id/nautor"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
<<<<<<< HEAD
        android:hint="@string/autor"/>
=======
        android:hint="Autor"/>
>>>>>>> 4046bac43c76db33d022d1b9e2af9a7151fc1d5d
    <EditText
        android:id="@+id/nyear"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:hint="@string/any"
=======
        android:hint="Any de publicació"
>>>>>>> 4046bac43c76db33d022d1b9e2af9a7151fc1d5d
        android:layout_marginBottom="24dp"
        android:inputType="number"/>
    <EditText
        android:id="@+id/npub"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
<<<<<<< HEAD
        android:hint="@string/editorial" />
=======
        android:hint="Editorial" />
>>>>>>> 4046bac43c76db33d022d1b9e2af9a7151fc1d5d
    <EditText
        android:id="@+id/ncat"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
<<<<<<< HEAD
        android:hint="@string/categoria" />
=======
        android:hint="Categoria" />
>>>>>>> 4046bac43c76db33d022d1b9e2af9a7151fc1d5d

    <TextView
        android:id="@+id/nval"
        android:paddingTop="8dp"
        android:textSize="18sp"
        android:text="@string/val"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="8dp"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1.0" />


</LinearLayout>
